# KairoSpatial

./: .gitignore  AStar.cppm  BVH.cppm  BVHBuilder.cppm  BVHTraversal.cppm  CMakeLists.txt  DynamicAABBTree.cppm  KDTree.cppm  KairoSpatial.cppm  NavigationGraph.cppm  Octree.cppm  Quadtree.cppm  README.md  SpatialDebug.cppm  SpatialHash.cppm  SpatialQuery.cppm  SpatialTypes.cppm  SweepAndPrune.cppm
tests/: SpatialTests.cpp
visual/: SpatialVisualizer.cpp  server.py  spatial_visualizer.html
